<resources>
    <string name="app_name">Black Jack AppX</string>
    <string name="userStackText">"Stack: "</string>
    <string name="playerName">"Player "</string>
    <string name="playerStack">Player Stack</string>
    <string name="drawText">Draw</string>
    <string name="holdText">Hold</string>
    <string name="betText">Place bet</string>
    <string name="logoutText">Logout</string>
    <string name="betSize">Bet Size</string>
    <string name="playerText">Player Text</string>
    <string name="playerText1">Player:</string>
    <string name="betSize2">0</string>
    <string name="btnLogin">Logga in</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Lösenord</string>
    <string name="play">Play</string>
    <string name="Score">score</string>
    <string name="dealerPoints">dPoints</string>
    <string name="btnPlay">Play</string>
    <string name="tvStartStack">You have $100</string>
    <string name="tvDealerScore">DEALER SCORE</string>
    <string name="tvUserScore">YOUR SCORE</string>
    <string name="tvCurrentBet">Current bet:</string>
</resources>