<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mat_3"
    tools:context=".BettingActivity">


    <EditText
        android:id="@+id/et_bet"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="5dp"
        android:background="@color/purple_200"
        android:backgroundTint="#C1C3D1"
        android:ems="10"
        android:hint="@string/betSize2"
        android:inputType="number"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_place_bet_and_start"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_place_bet_and_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="236dp"
        android:backgroundTint="#062B3C"
        android:text="@string/betText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_start_stack"
        android:layout_width="150dp"
        android:layout_height="68dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="456dp"
        android:background="@color/white"
        android:backgroundTint="#4CAF50"
        android:text="@string/tvStartStack"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#1A1C1C"
        android:text="@string/logoutText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>