<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mat_3"
    tools:context=".GameActivity">


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#1A1C1C"
        android:text="@string/logoutText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btn_draw"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#4AEF51"
        android:text="@string/drawText"
        android:textColor="#263238"
        app:layout_constraintStart_toEndOf="@+id/btn_hold"
        app:layout_constraintTop_toTopOf="@+id/btn_hold" />

    <Button
        android:id="@+id/btn_hold"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#F44A4A"
        android:text="@string/holdText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="#F4E"
        android:text="@string/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stack_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/userStackText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_stack_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="10dp"
        android:text="@string/playerStack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_stack_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/playerText1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_hold"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/playerName"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="60dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ImageView
        android:id="@+id/card4"
        android:layout_width="60dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ImageView
        android:id="@+id/card1"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_draw"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/btn_draw"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>